# and

./: .gitignore  .gitmodules  README.md  TODO.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/slate_api/: __init__.py  main.py
backend/slate_api/core/: config.py  deps.py  schemas.py
backend/slate_api/infra/: database.py  models.py
backend/slate_api/infra/llm/: providers.py
backend/slate_api/modules/auth/: oauth.py  router.py  schemas.py  service.py
backend/slate_api/modules/conversations/: router.py  schemas.py  service.py
backend/slate_api/modules/llm/: router.py  schemas.py  service.py
backend/tests/: conftest.py  test_auth_oauth_callback.py  test_llm.py  test_oauth.py
client/: App.css  App.tsx  index.html  main.tsx
client/components/agent/: ChatPanel.css  ChatPanel.tsx  InputArea.css  InputArea.tsx  MessageItem.css  MessageItem.tsx  MessageList.css  MessageList.tsx  ToolCallDisplay.css  ToolCallDisplay.tsx  index.ts
client/components/common/: Button.css  Button.tsx  Loading.css  Loading.tsx  Modal.css  Modal.tsx  Toast.css  Toast.tsx  index.ts
client/components/editor/: MonacoEditor.css  MonacoEditor.tsx  index.ts
client/components/layout/: AppLayout.css  Header.css  (+9 more)
client/constants/: index.ts  prompts.ts  tools.ts
client/hooks/: index.ts  useAgent.ts  useConversation.ts
client/routes/: index.tsx
client/services/: project.ts
client/stores/: agentStore.ts  configStore.ts  conversationStore.ts  editorStore.ts  index.ts  projectStore.ts  uiStore.ts
client/styles/: theme.css
client/types/: index.ts
client/utils/: index.ts  pathUtils.ts
editor/: App.tsx  README.md
editor/constants/: llmProviders.ts
editor/hooks/: index.ts  useAgent.ts
editor/services/: project.ts
editor/stores/: agentStore.ts  index.ts  projectStore.ts
editor/types/: index.ts
editor/utils/: index.ts
native/: Cargo.toml
native/capabilities/: default.json
native/src/: lib.rs
native/src/commands/: config.rs  mod.rs  workspace.rs
native/src/config/: manager.rs  mod.rs  types.rs
native/src/mcp/: manager.rs
native/src/pty/: commands.rs  manager.rs
server/: Cargo.toml  tauri.conf.json
server/capabilities/: default.json
server/icons/: icon.icns
server/scripts/: generate-icons.js  generate-icons.mjs
server/src/: lib.rs
server/src/commands/: mod.rs  system.rs  tools.rs  workspace.rs
src/: App.css  App.tsx  MonacoEditor.tsx  main.tsx  monaco-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+175 files in other folders)
