[package]
name = "and"
version = "0.1.0"
description = "Protagonist Agent - 智能代码助手"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "and_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
whoami = "1.5"
dirs = "5"
which = "6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
