[package]
name = "and"
version = "0.1.0"
description = "Tauri + Monaco 基础示例"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "and_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
